--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link href="css/estilo.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/favico/favicon.ico">
-    <title>Está na Tag, está no Ar!</title>
+    <title>Tag.com - "Está na Tag, está no Ar!"</title>
   </head>
 
   <body>
     <nav>
       <!--Logo centralizado e ajustado no topo-->
       <center>
-      <div class="container">
-        <div class="imgLogo">
-        <img src="img/logo/logoaju.png" alt="Tag.com Logo" width="25%" height="auto">
+        <div class="container">
+          <div class="imgLogo">
+          <img src="img/logo/logoaju.png" width="30%" alt="Tag.com Logo">
+          </div>
         </div>
-      </div>
       </center>
 
       <!--Navegador no Topo-->
@@ -81,12 +81,12 @@
         <div class="col-md border-left" style="padding: 2% 1%;">
             <img class="card-img" src="img/noticias/awp.png"/>
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">CS:GO: Skin para arma é vendida por R$ 658 mil</a>
+              <a href="./pages/csgo.html" id="meulink">CS:GO: Skin para arma é vendida por R$ 658 mil</a>
             </div>
             <hr>
             <img class="card-img" src="img/noticias/lolline.jpg"/>
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">Equipe de esports recebe US$ 210 milhões de empresa</a>
+              <a href="./pages/equipe_lol.html" id="meulink">Equipe de esports recebe US$ 210 milhões de empresa</a>
             </div>
             <hr>
             <img class="card-img" src="img/noticias/future.jpg"/>
@@ -99,7 +99,7 @@
         <div class="col-md border-left" style="padding: 2% 1%;">
             <img class="card-img" src="img/noticias/tesla.png">
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
+              <a href="./pages/tesla.html" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
             </div>
             <hr>
             <img class="card-img" src="img/noticias/rocketleague.jpg"/>
@@ -172,17 +172,35 @@
             </form>
             
             <!--Area de Redes Sociasi e contato do site-->
-            <div class="textCenter">
+            <div class="textCenter" style="padding: 8% 0%;">
               <u>REDE SOCIAIS</u>
             </div>
-            <div style="padding: 5% 0%;">
-            <img class="card-img" src="img/redesocial/facebook.png">
+            <div style="padding: 2% 0%;">
+              <div class="imgface">
+                <a href="https://www.facebook.com/Tagcom-106992501632839" target="_blank" id="linkWhite">
+                  <p class="textCenter">
+                   /Tanatag
+                  </p>
+                </a>
+              </div>
             </div>
+
             <div style="padding: 5% 0%;">
-            <img class="card-img" src="img/redesocial/instagram.png">
+              <div class="imginstagram">
+                <a href="https://www.instagram.com/tanatag1_/" target="_blank" id="linkWhite">
+                  <p class="textCenter">
+                   @natag
+                  </p>
+                </a>
+              </div>
             </div>
-            <div style="padding: 5% 0%;">
-            <img class="card-img" src="img/redesocial/twitter.png">
+
+            <div class="imgtwitter">
+              <a href="https://twitter.com/TaNaTag_" target="_blank" id="linkWhite">
+                 <p class="textCenter">
+                 #tagofficial
+                 </p>
+              </a>
             </div>
         </div>
       </div>
@@ -195,21 +213,21 @@
         <div class="col-md-4">
           <img class="card-img" src="img/grid/facebooknot.jpg" alt="Facebook Noticia">
           <div class="textGrid textCenter">
-            <a href="#" id="meulink">Facebook é investigado por paises.</a>
+            <a href="./pages/facebook_investigado.html" id="meulink">Facebook é investigado por paises.</a>
           </div>
         </div>
 
         <div class="col-md-4">
           <img class="card-img" src="img/grid/notwitter.jpg" alt="Twitter Noticia">
           <div class="textGrid textCenter">
-            <a href="#" id="meulink">Twitter blue é lançado oficialmente.</a>
+            <a href="./pages/twitter_blue.html" id="meulink">Twitter blue é lançado oficialmente.</a>
           </div>
         </div>
 
         <div class="col-md-4">
           <img class="card-img" src="img/grid/microsoft.jpg" alt="Microsoft Noticia">
           <div class="textGrid textCenter">
-            <a href="#" id="meulink">Microsoft: Anuncia evento que podera,...</a>
+            <a href="./pages/microsoft_anuncia_evento.html" id="meulink">Microsoft: Anuncia evento que podera,...</a>
           </div>
         </div>
       </div>
@@ -222,7 +240,7 @@
             <td><img  width="100" src="img/conteudo/gnoticia.png"/></td>
   
             <td>
-              <a href="#" id="linkRed">Google vai permitir que buscadores rivais 
+              <a href="./pages/google_e_buscadores_rivais.html" id="linkRed">Google vai permitir que buscadores rivais 
               apareçam de graça em dispositivos Android na Europa</a>
             </td> 
           </tr>
@@ -236,7 +254,7 @@
             <td><img  width="100" src="img/conteudo/inoticia.png"/></td>
   
             <td> 
-              <a href="#" id="linkRed">Internet global sofre falha e grandes 
+              <a href="./pages/internet_global.html" id="linkRed">Internet global sofre falha e grandes 
               sites saem do ar</a>
             </td> 
           </tr>
