--- a/pages/csgo.html
+++ b/pages/csgo.html
@@ -7,18 +7,18 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/contstyle.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/favico/favicon.ico">
-    <title>Jeff Bezos vai ao espaço no 1º voo tripulado da Blue Origin</title>
+    <title>CS:GO: Skin para arma é vendida por R$ 658 mil</title>
   </head>
 
   <body>
     <nav>
       <!--Logo centralizado e ajustado no topo-->
       <center>
-      <div class="container">
-        <div class="imgLogo">
-        <img src="../img/logo/logoaju.png" alt="Tag.com Logo" width="25%" height="auto">
+        <div class="container">
+          <div class="imgLogo">
+          <img src="../img/logo/logoaju.png" width="30%" alt="Tag.com Logo">
+          </div>
         </div>
-      </div>
       </center>
 
       <!--Navegador no Topo-->
@@ -78,42 +78,26 @@
 
     <main>
       <div class="content" style="padding: 2% 2%;">
-        <h1 class="textCenter">
+        <h2 class="textCenter">
           <strong>
             <font color="red">
-             Jeff Bezos vai ao espaço no 1º voo tripulado da Blue Origin
+              CS:GO: Skin para arma é vendida por R$ 658 mil
             </font>
           </strong>
-        </h1>
+        </h2>
         <div>
-        <img src="../img/noticias/future.jpg" alt="Jeff Bezos vai ao espaço" width="30%" align="left"/>
+        <img src="../img/noticias/awp.png" alt="Cs go" width="30%" align="left"/>
         </div>
 
-         <p style="padding-left: 25%;"> O New Shepard, primeiro foguete tripulado da Blue Origin, vai ter o 
-         fundador e CEO, Jeff Bezos, como um dos passageiros em uma viagem 
-         ao espaço. O próprio bilionário, que fundou o grupo Amazon, confirmou a notícia, 
-         informando que o irmão, Mark Bezos, também vai estar presente.</p>
+         <p>Quanto vale uma simples skin de um jogo? Para alguns absolutamente nada. Já para outros, apenas um item pode valer R$ 658 mil. É o caso do youtuber Prodigy, que comprou a "Melhor AWP Medusa do mundo", do jogo Counter-Strike: Global Offensive (CS:GO), por este valor exorbitante.</p>
 
-         <p>Ele contou no instagram que desde quando tinha cinco anos, 
-         sonhava em viajar para o espaço, 
-         e no dia 20 de julho, vai embarcar nessa jornada com o irmão. 
-         A maior das aventuras, com o melhor amigo.</p>
+         <p>A compra foi anunciada na semana passada, em 1 de junho. Para conseguir o item raríssimo, Prodigy contou com a ajuda de Robert e Zipel, dois colecionadores de skins extremamente famosos no ramo. Segundo o site Buff163, este foi o item mais caro já vendido na plataforma.</p>
 
-         <p>Bezos vai se tornar o primeiro bilionário a viajar ao espaço: Elon Musk, 
-         fundador da SpaceX, já manifestou o desejo de 
-         embarcar nesse tipo de viagem, mas nunca marcou uma data, 
-         e Richard Branson, da Virgin Galactic, planeja embarcar em algo similar no segundo semestre.</p>
+         <p>Nesta altura você provavelmente já deve estar se perguntando o que esta AWP Medusa tem de tão especial. Além da própria skin ser rara e cara por si só - uma normal nova de fábrica custa aproximadamente R$ 26,5 mil de acordo com o pricempire -, este modelo especificamente tem duas características a mais que a torna quase inestimável.</p>
 
-         <p>O New Shepard que vai levar Jeff Bezos ao espaço foi projetado 
-         para embarcar uma tripulação de seis pessoas, em um voo de 
-         mais ou menos 11 minutos de duração com previsão de chegar a 
-         pouco mais de 96 quilômetros acima da Terra.</p>
+         <p>A primeira característica é que esta AWP Medusa adquirida pelo dinamarquês se trata do segundo melhor float do mundo desta skin. O float da arma está em 0.0005, enquanto o primeiro lugar tem 0.0004. Já o terceiro lugar está um pouco mais longe em 0.0008. Quanto menor o float de uma skin de CS:GO, menos desgastada ela está.</p>
 
-         <p>Não está claro ainda se a viagem dele também inclui 
-         passageiros pagantes, mesmo porque ainda não foram divulgados os 
-         preços das passagens. Mas pelo menos um destes “primeiros passageiros” 
-         vai ser o vencedor de um leilão que ainda está em curso. Os lances, 
-         té o momento, estão em quase 3 milhões de dólares, ou mais de 15 milhões de reais.</p>
+         <p>Para se tornar ainda mais rara do que a AWP Medusa com o melhor float do mundo, a segunda colocada conta com quatro adesivos Titan Holo de Katowice 2014 colados, sendo que apenas um deste sozinho custa cerca de R$ 118 mil. Quando juntamos o float e os quatro adesivos colados, temos a melhor AWP Medusa do mundo, a qual custou recentemente R$ 658 mil.</p>
       </div>
   </main>
 
@@ -122,17 +106,17 @@
         <div class="col-md border-left" style="padding: 2% 1%;">
             <img class="card-img" src="../img/noticias/tesla.png">
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
+              <a href="../pages/tesla.html" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
             </div>
             <hr>
             <img class="card-img" src="../img/noticias/rocketleague.jpg"/>
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
+              <a href="../pages/rocket_league.html" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
             </div>
             <hr>
             <img class="card-img" src="../img/noticias/eua.jfif"/>
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
+              <a href="../pages/eua_paises.html" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
             </div>
         </div>
 
@@ -195,17 +179,35 @@
             </form>
             
             <!--Area de Redes Sociasi e contato do site-->
-            <div class="textCenter">
+            <div class="textCenter" style="padding: 8% 0%;">
               <u>REDE SOCIAIS</u>
             </div>
-            <div style="padding: 5% 0%;">
-            <img class="card-img" src="../img/redesocial/facebook.png">
+            <div style="padding: 2% 0%;">
+              <div class="imgface">
+                <a href="https://www.facebook.com/Tagcom-106992501632839" target="_blank" id="linkWhite">
+                  <p class="textCenter">
+                   /Tanatag
+                  </p>
+                </a>
+              </div>
             </div>
+
             <div style="padding: 5% 0%;">
-            <img class="card-img" src="../img/redesocial/instagram.png">
+              <div class="imginstagram">
+                <a href="https://www.instagram.com/tanatag1_/" target="_blank" id="linkWhite">
+                  <p class="textCenter">
+                   @natag
+                  </p>
+                </a>
+              </div>
             </div>
-            <div style="padding: 5% 0%;">
-            <img class="card-img" src="../img/redesocial/twitter.png">
+
+            <div class="imgtwitter">
+              <a href="https://twitter.com/TaNaTag_" target="_blank" id="linkWhite">
+                 <p class="textCenter">
+                 #tagofficial
+                 </p>
+              </a>
             </div>
         </div>
       </div>
