--- a/pages/equipe_lol.html
+++ b/pages/equipe_lol.html
@@ -7,7 +7,7 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/contstyle.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/favico/favicon.ico">
-    <title>Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA</title>
+    <title>Equipe de esports recebe US$ 210 milhões de empresa de criptomoedas</title>
   </head>
 
   <body>
@@ -77,45 +77,22 @@
     </header>
 
     <main>
-      <div class="content" style="padding: 2% 2%;">
-        <h2 class="textCenter">
-          <strong>
-            <font color="red">
-            Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA
-            </font>
-          </strong>
-        </h2>
-        <div>
-        <img src="../img/noticias/eua.jfif" alt="Biden mantém restrições" width="30%" align="left"/>
-        </div>
+         <div class="content" style="padding: 2% 2%;">
+           <h2 class="textCenter">
+              <strong>
+                <font color="red">
+                  Equipe de esports recebe US$ 210 milhões de empresa de criptomoedas
+                </font>
+              </strong>
+           </h2>
 
-         <p style="padding-left: 25%;"> O governo do presidente dos Estados Unidos, 
-          Joe Biden, emitiu uma nova ordem executiva que proíbe empresas 
-          sediadas no país de investirem em 59 companhias de tecnologia com origem na China. 
-          A decisão segue uma outra ordem executiva da gestão anterior, 
-          quando o então presidente Donald Trump impediu que entidades 
-          chinesas comprassem tecnologias fabricadas nos EUA.</p>
-
-         <p>Em comunicado publicado pela Casa Branca no último dia 3 de junho, 
-           a administração Biden afirma que a nova ordem executiva foi projetada para enfrentar 
-           ainda mais a “ameaça em curso representada pelo complexo militar-industrial da República Popular da China (RPC)”. 
-           Também destaca que cidadãos e empresas com sede nos EUA não podem 
-           investir ou “se envolver na compra ou venda” de negócios 
-           que envolvam as quase 60 entidades mencionadas.</p>
-
-         <p>A Casa Branca diz que o desenvolvimento contínuo de tecnologia chinesa, 
-           em especial aquela com foco em vigilância, e a implantação desses recursos 
-           em países fora da China representam um risco para a segurança nacional, 
-           ao mesmo tempo que facilitam a repressão ou o abuso dos direitos humanos.</p>
-
-         <p>As 59 empresas que foram inclusas na lista do governo 
-           estadunidense vão desde organizações chinesas de defesa e aviação 
-           até vigilância e tecnologia. Todas elas, segundo os EUA, 
-           supostamente apoiam o complexo militar-industrial chinês. 
-           O número de companhias pode aumentar, 
-           uma vez que o governo Biden já sinalizou que verifica 
-           constantemente novas empresas de práticas suspeitas.</p>
-      </div>
+          <img src="../img/noticias/lolline.jpg" alt="Equipe de esports recebe US$ 210 milhões de empresa de criptomoedas" width="40%" align="left"/>
+          <p>A equipe de esports TSM — a Team SoloMid — fechou um acordo de US$ 210 milhões 
+            (cerca de R$ 1 bilhão) com a FTX, uma corretora de criptomoedas baseada em Hong Kong, 
+            e anunciou a mudança do nome do time para TSM FTX. A informação foi revelada na última sexta-feira (4) 
+            pelo The New York Times. A novidade, porém, não agradou a Riot Games, que proibiu a 
+            organização de usar a nova nomenclatura em campeonatos oficiais de League of Legends e Valorant.</p>
+         </div> 
   </main>
 
     <aside>
