--- a/pages/facebook_investigado.html
+++ b/pages/facebook_investigado.html
@@ -7,7 +7,7 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/contstyle.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/favico/favicon.ico">
-    <title>Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA</title>
+    <title>Facebook é investigado por paises</title>
   </head>
 
   <body>
@@ -81,40 +81,40 @@
         <h2 class="textCenter">
           <strong>
             <font color="red">
-            Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA
+              Facebook é investigado por paises
             </font>
           </strong>
         </h2>
         <div>
-        <img src="../img/noticias/eua.jfif" alt="Biden mantém restrições" width="30%" align="left"/>
+        <img src="../img/noticias/facebookapp.jpg" alt="Facebook É Investigado." width="25%" align="left"/>
         </div>
 
-         <p style="padding-left: 25%;"> O governo do presidente dos Estados Unidos, 
-          Joe Biden, emitiu uma nova ordem executiva que proíbe empresas 
-          sediadas no país de investirem em 59 companhias de tecnologia com origem na China. 
-          A decisão segue uma outra ordem executiva da gestão anterior, 
-          quando o então presidente Donald Trump impediu que entidades 
-          chinesas comprassem tecnologias fabricadas nos EUA.</p>
+         <p>A Comissão Europeia e autoridades reguladoras do Reino Unido deram início a uma investigação contra o Facebook para determinar se a empresa violou regras de concorrência. 
+            Em anúncio publicado nesta sexta-feira (4), 
+            as entidades mostraram interesse em descobrir se a gigante de Mark Zuckerberg utilizou 
+            dados obtidos dos usuários para se destacar no mercado de anúncios classificados do Facebook Marketplace.</p>
 
-         <p>Em comunicado publicado pela Casa Branca no último dia 3 de junho, 
-           a administração Biden afirma que a nova ordem executiva foi projetada para enfrentar 
-           ainda mais a “ameaça em curso representada pelo complexo militar-industrial da República Popular da China (RPC)”. 
-           Também destaca que cidadãos e empresas com sede nos EUA não podem 
-           investir ou “se envolver na compra ou venda” de negócios 
-           que envolvam as quase 60 entidades mencionadas.</p>
+         <p>As preocupações das autoridades europeias está em entender se a rede social compete de forma 
+             justa no mercado de classificados, em que concorre com vasta posse sobre dados (até mesmo de empresas rivais).
+              “O Facebook coleta uma grande quantidade de dados sobre as atividades dos usuários de sua rede social, 
+              permitindo que ele atinja grupos específicos de clientes”, disse a Comissária Europeia para a Concorrência,
+              Margrethe Vestager.</p>
 
-         <p>A Casa Branca diz que o desenvolvimento contínuo de tecnologia chinesa, 
-           em especial aquela com foco em vigilância, e a implantação desses recursos 
-           em países fora da China representam um risco para a segurança nacional, 
-           ao mesmo tempo que facilitam a repressão ou o abuso dos direitos humanos.</p>
+         <p>“Analisaremos em detalhes se esses dados dão ao Facebook uma vantagem competitiva indevida, 
+             em particular no setor de anúncios classificados online, onde as pessoas compram e vendem produtos todos os dias
+              e onde o Facebook também compete com empresas das quais coleta dados”, 
+              completou a comissária.</p>
 
-         <p>As 59 empresas que foram inclusas na lista do governo 
-           estadunidense vão desde organizações chinesas de defesa e aviação 
-           até vigilância e tecnologia. Todas elas, segundo os EUA, 
-           supostamente apoiam o complexo militar-industrial chinês. 
-           O número de companhias pode aumentar, 
-           uma vez que o governo Biden já sinalizou que verifica 
-           constantemente novas empresas de práticas suspeitas.</p>
+         <p>A Comissão Europeia afirma que análises preliminares levantaram suspeitas de que a 
+             gigante estaria utilizando dados de outros serviços de anúncios classificados para 
+             competir com eles. Agora, a entidade dará sequência às investigações ao lado da
+              Autoridade de Concorrência e Mercados (CMA) para esclarecer tais questões.</p>
+
+         <p>“O Facebook é usado por quase 3 bilhões de pessoas todos os meses e quase sete milhões de empresas publicam
+              anúncios comerciais na plataforma. Assim, a empresa coleta enormes quantidades de dados das 
+              atividades dos usuários de suas redes sociais, 
+             o que permite atingir grupos de usuários especificamente”, 
+             complementou Vestager.</p>
       </div>
   </main>
 
@@ -128,12 +128,12 @@
             <hr>
             <img class="card-img" src="../img/noticias/rocketleague.jpg"/>
             <div class="bgGrid textCenter">
-              <a href="./rocket_league.html" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
+              <a href="../pages/rocket_league.html" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
             </div>
             <hr>
             <img class="card-img" src="../img/noticias/eua.jfif"/>
             <div class="bgGrid textCenter">
-              <a href="./eua_paises.html" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
+              <a href="../pages/eua_paises.html" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
             </div>
         </div>
 
