--- a/pages/google_e_buscadores_rivais.html
+++ b/pages/google_e_buscadores_rivais.html
@@ -7,18 +7,18 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/contstyle.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/favico/favicon.ico">
-    <title>Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA</title>
+    <title>Google vai permitir que buscadores rivais apareçam de graça em dispositivos Android na Europa</title>
   </head>
 
   <body>
     <nav>
       <!--Logo centralizado e ajustado no topo-->
       <center>
-        <div class="container">
-          <div class="imgLogo">
-          <img src="../img/logo/logoaju.png" width="30%" alt="Tag.com Logo">
-          </div>
+      <div class="container">
+        <div class="imgLogo">
+        <img src="../img/logo/logoaju.png" alt="Tag.com Logo" width="25%" height="auto">
         </div>
+      </div>
       </center>
 
       <!--Navegador no Topo-->
@@ -81,40 +81,39 @@
         <h2 class="textCenter">
           <strong>
             <font color="red">
-            Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA
+                Google vai permitir que buscadores rivais 
+                apareçam de graça em dispositivos Android na Europa
             </font>
           </strong>
         </h2>
         <div>
-        <img src="../img/noticias/eua.jfif" alt="Biden mantém restrições" width="30%" align="left"/>
+        <img src="../img/conteudo/gnoticia.png" alt="Google vai permitir que buscadores rivais apareçam de graça em dispositivos Android na Europa" width="30%" align="left"/>
         </div>
+         <p>O Google vai deixar seus concorrentes 
+             competirem gratuitamente para serem os mecanismos de busca padrão 
+             em dispositivos Android na Europa. A medida, que amplia uma promessa 
+             feita a reguladores antitruste da União Europeia em 2019, 
+             acaba com o modelo de leilão adotado à época..</p>
 
-         <p style="padding-left: 25%;"> O governo do presidente dos Estados Unidos, 
-          Joe Biden, emitiu uma nova ordem executiva que proíbe empresas 
-          sediadas no país de investirem em 59 companhias de tecnologia com origem na China. 
-          A decisão segue uma outra ordem executiva da gestão anterior, 
-          quando o então presidente Donald Trump impediu que entidades 
-          chinesas comprassem tecnologias fabricadas nos EUA.</p>
+         <p>"Agora, estamos fazendo algumas alterações finais na tela de escolha, incluindo tornar 
+             a participação gratuita para provedores de pesquisa qualificados. Também aumentaremos 
+             o número de provedores de pesquisa exibidos na tela", 
+             afirmou Oliver Bethell, diretor do Google, nesta terça-feira (8).</p>
 
-         <p>Em comunicado publicado pela Casa Branca no último dia 3 de junho, 
-           a administração Biden afirma que a nova ordem executiva foi projetada para enfrentar 
-           ainda mais a “ameaça em curso representada pelo complexo militar-industrial da República Popular da China (RPC)”. 
-           Também destaca que cidadãos e empresas com sede nos EUA não podem 
-           investir ou “se envolver na compra ou venda” de negócios 
-           que envolvam as quase 60 entidades mencionadas.</p>
+         <p>O Google disse que os cinco mecanismos de busca qualificados mais populares em cada país da UE, 
+             segundo o StatCounter, incluindo o seu próprio serviço, serão exibidos em ordem aleatória na 
+             parte superior de uma tela de escolha no Android. A seção mostrará até sete buscadores adicionais
+              na parte inferior. 
+             As mudanças entrarão em vigor em setembro.</p>
 
-         <p>A Casa Branca diz que o desenvolvimento contínuo de tecnologia chinesa, 
-           em especial aquela com foco em vigilância, e a implantação desses recursos 
-           em países fora da China representam um risco para a segurança nacional, 
-           ao mesmo tempo que facilitam a repressão ou o abuso dos direitos humanos.</p>
+         <p>Anteriormente, a empresa só permitia que quatro concorrentes, 
+             escolhidos em leilões separados para cada país da UE, 
+             fossem apresentados nas telas do Android.</p>
 
-         <p>As 59 empresas que foram inclusas na lista do governo 
-           estadunidense vão desde organizações chinesas de defesa e aviação 
-           até vigilância e tecnologia. Todas elas, segundo os EUA, 
-           supostamente apoiam o complexo militar-industrial chinês. 
-           O número de companhias pode aumentar, 
-           uma vez que o governo Biden já sinalizou que verifica 
-           constantemente novas empresas de práticas suspeitas.</p>
+         <p>Esse modelo foi definido meses após o Google ter sido multado em 4,34 bilhões de euros pela Comissão Europeia. 
+             O órgão regulador 
+             entendeu que a 
+             empresa usou injustamente o Android para estabelecer o domínio de seu mecanismo de busca..</p>
       </div>
   </main>
 
@@ -123,7 +122,7 @@
         <div class="col-md border-left" style="padding: 2% 1%;">
             <img class="card-img" src="../img/noticias/tesla.png">
             <div class="bgGrid textCenter">
-              <a href="./tesla.html" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
+              <a href="#" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
             </div>
             <hr>
             <img class="card-img" src="../img/noticias/rocketleague.jpg"/>
