--- a/pages/internet_global.html
+++ b/pages/internet_global.html
@@ -7,18 +7,19 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/contstyle.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/favico/favicon.ico">
-    <title>Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA</title>
+    <title>Internet global sofre falha e grandes 
+        sites saem do ar</title>
   </head>
 
   <body>
     <nav>
       <!--Logo centralizado e ajustado no topo-->
       <center>
-        <div class="container">
-          <div class="imgLogo">
-          <img src="../img/logo/logoaju.png" width="30%" alt="Tag.com Logo">
-          </div>
+      <div class="container">
+        <div class="imgLogo">
+        <img src="../img/logo/logoaju.png" alt="Tag.com Logo" width="25%" height="auto">
         </div>
+      </div>
       </center>
 
       <!--Navegador no Topo-->
@@ -78,43 +79,41 @@
 
     <main>
       <div class="content" style="padding: 2% 2%;">
-        <h2 class="textCenter">
+        <h3 class="textCenter">
           <strong>
             <font color="red">
-            Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA
+                Internet global sofre falha e grandes 
+                sites saem do ar
             </font>
           </strong>
-        </h2>
+        </h3>
         <div>
-        <img src="../img/noticias/eua.jfif" alt="Biden mantém restrições" width="30%" align="left"/>
+        <img src="../img/conteudo/inoticia.png" alt="Internet global sofre falha e grandes 
+        sites saem do ar" width="30%" align="left"/>
         </div>
 
-         <p style="padding-left: 25%;"> O governo do presidente dos Estados Unidos, 
-          Joe Biden, emitiu uma nova ordem executiva que proíbe empresas 
-          sediadas no país de investirem em 59 companhias de tecnologia com origem na China. 
-          A decisão segue uma outra ordem executiva da gestão anterior, 
-          quando o então presidente Donald Trump impediu que entidades 
-          chinesas comprassem tecnologias fabricadas nos EUA.</p>
+         <p>A lista inclui sites como o Reddit, Spotify, 
+            Twitch, CNN, BBC, The New York Times, The Guardian e outros que saíram do ar.</p>
 
-         <p>Em comunicado publicado pela Casa Branca no último dia 3 de junho, 
-           a administração Biden afirma que a nova ordem executiva foi projetada para enfrentar 
-           ainda mais a “ameaça em curso representada pelo complexo militar-industrial da República Popular da China (RPC)”. 
-           Também destaca que cidadãos e empresas com sede nos EUA não podem 
-           investir ou “se envolver na compra ou venda” de negócios 
-           que envolvam as quase 60 entidades mencionadas.</p>
+         <p>O problema pode estar relacionado com o provedor norte-americano de serviços Fastly, 
+             que atua como o Cloudflare, por exemplo. Em uma página de status do serviço, 
+             a empresa confirma que as falhas começaram por volta das 6h58 (horário de Brasília). 
+             Por volta das 7h57, a página indica que os sites começaram a voltar ao ar.</p>
 
-         <p>A Casa Branca diz que o desenvolvimento contínuo de tecnologia chinesa, 
-           em especial aquela com foco em vigilância, e a implantação desses recursos 
-           em países fora da China representam um risco para a segurança nacional, 
-           ao mesmo tempo que facilitam a repressão ou o abuso dos direitos humanos.</p>
+         <p>“O problema foi identificado e uma correção foi aplicada. Os clientes podem experimentar um 
+             aumento na carga de origem conforme os serviços globais retornam”, diz a Fastly.</p>
 
-         <p>As 59 empresas que foram inclusas na lista do governo 
-           estadunidense vão desde organizações chinesas de defesa e aviação 
-           até vigilância e tecnologia. Todas elas, segundo os EUA, 
-           supostamente apoiam o complexo militar-industrial chinês. 
-           O número de companhias pode aumentar, 
-           uma vez que o governo Biden já sinalizou que verifica 
-           constantemente novas empresas de práticas suspeitas.</p>
+         <p>Provedor de serviços Fastly, dos EUA, confirmou 
+             falha em seus sistemas que derrubou grandes sites ao redor do mundo</p>
+         
+         <p>Apesar da falha, a Fastly não confirmou, até então, qual problema específicou causou a 
+             interrupção nos serviços. Neste momento, alguns dos sites ainda podem experimentar 
+             falhas de acesso, enquanto outros já voltaram a operar regularmente.</p>
+         
+         <p>Além de grandes plataformas, jornais e sites de notícias, a falha também parece ter afetado alguns governos.
+              Até agora, o Reino Unido se pronunciou confirmando que o site “gov.uk” ficou fora do ar, impedindo que cidadãos 
+              udessem realizar novas solicitações. Por volta das 9h, 
+             constatamos que o portal já voltou a operar regularmente.</p>
       </div>
   </main>
 
@@ -123,7 +122,7 @@
         <div class="col-md border-left" style="padding: 2% 1%;">
             <img class="card-img" src="../img/noticias/tesla.png">
             <div class="bgGrid textCenter">
-              <a href="./tesla.html" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
+              <a href="#" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
             </div>
             <hr>
             <img class="card-img" src="../img/noticias/rocketleague.jpg"/>
