--- a/pages/microsoft_anuncia_evento.html
+++ b/pages/microsoft_anuncia_evento.html
@@ -7,7 +7,7 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/contstyle.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/favico/favicon.ico">
-    <title>Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA</title>
+    <title>Microsoft anuncia evento que pode revelar Windows 11</title>
   </head>
 
   <body>
@@ -81,41 +81,39 @@
         <h2 class="textCenter">
           <strong>
             <font color="red">
-            Biden mantém restrições e 59 empresas da China não podem comprar tecnologias dos EUA
+              Microsoft anuncia evento que pode revelar Windows 11
             </font>
           </strong>
         </h2>
         <div>
-        <img src="../img/noticias/eua.jfif" alt="Biden mantém restrições" width="30%" align="left"/>
+        <img src="../img/noticias/microsoftw11.jfif" alt="Microsoft anuncia evento que pode revelar Windows 11" width="30%" align="left"/>
         </div>
+         <p> A Microsoft deve revelar uma nova edição do Windows no dia 24 de junho. 
+           Rumores indicam que o anúncio iria além de uma simples atualização do Windows 10 e apresentaria um Windows 11,
+           uma versão completa com novas funcionalidades, Windows Store remodelada, além do rejuvenescimento de interface
+           gráfica e iconografia, 
+           reaproveitando o trabalho iniciado no ciclo de desenvolvimento do Windows 10X
+           Não há confirmação de que a Microsoft irá mesmo apresentar o novo Windows 11 na data, 
+           mas rumores e indícios dos últimos meses indicam que a nova geração é real e chega seis 
+           anos depois do lançamento do Windows 10.</p>
 
-         <p style="padding-left: 25%;"> O governo do presidente dos Estados Unidos, 
-          Joe Biden, emitiu uma nova ordem executiva que proíbe empresas 
-          sediadas no país de investirem em 59 companhias de tecnologia com origem na China. 
-          A decisão segue uma outra ordem executiva da gestão anterior, 
-          quando o então presidente Donald Trump impediu que entidades 
-          chinesas comprassem tecnologias fabricadas nos EUA.</p>
+         <p>Muito do que se antecipa para essa potencial nova versão do Windows tem relação com mudanças
+           profundas no visual do sistema, cheio de elementos com origem ainda no Windows 95. 
+           As alterações do novo projeto gráfico, que são designadas pelo nome de "Sun Valley" internamente, 
+           representariam uma profunda remodelagem da interface do Windows com vistas a torná-lo mais moderno, 
+           funcional e competitivo diante de sistemas com interfaces mais flexíveis.</p>
 
-         <p>Em comunicado publicado pela Casa Branca no último dia 3 de junho, 
-           a administração Biden afirma que a nova ordem executiva foi projetada para enfrentar 
-           ainda mais a “ameaça em curso representada pelo complexo militar-industrial da República Popular da China (RPC)”. 
-           Também destaca que cidadãos e empresas com sede nos EUA não podem 
-           investir ou “se envolver na compra ou venda” de negócios 
-           que envolvam as quase 60 entidades mencionadas.</p>
-
-         <p>A Casa Branca diz que o desenvolvimento contínuo de tecnologia chinesa, 
-           em especial aquela com foco em vigilância, e a implantação desses recursos 
-           em países fora da China representam um risco para a segurança nacional, 
-           ao mesmo tempo que facilitam a repressão ou o abuso dos direitos humanos.</p>
-
-         <p>As 59 empresas que foram inclusas na lista do governo 
-           estadunidense vão desde organizações chinesas de defesa e aviação 
-           até vigilância e tecnologia. Todas elas, segundo os EUA, 
-           supostamente apoiam o complexo militar-industrial chinês. 
-           O número de companhias pode aumentar, 
-           uma vez que o governo Biden já sinalizou que verifica 
-           constantemente novas empresas de práticas suspeitas.</p>
-      </div>
+         <p>Esse redesign teria origem no projeto do Windows 10X, uma edição do Windows que 
+           seria mais leve para rodar em dispositivos mais simples, mas também mais adequada 
+           às realidades de novos formatos de aparelhos, como notebooks com duas telas e dispositivos com displays 
+           dobráveis. 
+           No fim das contas, a Microsoft interrompeu o desenvolvimento do 10X.
+           Além da mudança de interface, o sistema ganharia uma Windows Store mais eficiente e remodelada para
+           atrair um maior número de desenvolvedores e finalmente cumprir o papel de se tornar a principal 
+           fonte de aplicações para o sistema. A loja se tornaria franca, permitindo que qualquer 
+           desenvolvedor distribua software por meio dela e derrubando antigas restrições,
+           como as barreiras existentes hoje para navegadores.</p>
+    </div>
   </main>
 
     <aside>
@@ -128,12 +126,12 @@
             <hr>
             <img class="card-img" src="../img/noticias/rocketleague.jpg"/>
             <div class="bgGrid textCenter">
-              <a href="./rocket_league.html" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
+              <a href="../pages/rocket_league.html" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
             </div>
             <hr>
             <img class="card-img" src="../img/noticias/eua.jfif"/>
             <div class="bgGrid textCenter">
-              <a href="./eua_paises.html" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
+              <a href="../pages/eua_paises.html" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
             </div>
         </div>
 
