--- a/pages/rocket_league.html
+++ b/pages/rocket_league.html
@@ -14,11 +14,11 @@
     <nav>
       <!--Logo centralizado e ajustado no topo-->
       <center>
-      <div class="container">
-        <div class="imgLogo">
-        <img src="../img/logo/logoaju.png" alt="Tag.com Logo" width="25%" height="auto">
+        <div class="container">
+          <div class="imgLogo">
+          <img src="../img/logo/logoaju.png" width="30%" alt="Tag.com Logo">
+          </div>
         </div>
-      </div>
       </center>
 
       <!--Navegador no Topo-->
@@ -118,7 +118,7 @@
         <div class="col-md border-left" style="padding: 2% 1%;">
             <img class="card-img" src="../img/noticias/tesla.png">
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
+              <a href="./tesla.html" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
             </div>
             <hr>
             <img class="card-img" src="../img/noticias/rocketleague.jpg"/>
@@ -191,17 +191,35 @@
             </form>
             
             <!--Area de Redes Sociasi e contato do site-->
-            <div class="textCenter">
+            <div class="textCenter" style="padding: 8% 0%;">
               <u>REDE SOCIAIS</u>
             </div>
-            <div style="padding: 5% 0%;">
-            <img class="card-img" src="../img/redesocial/facebook.png">
+            <div style="padding: 2% 0%;">
+              <div class="imgface">
+                <a href="https://www.facebook.com/Tagcom-106992501632839" target="_blank" id="linkWhite">
+                  <p class="textCenter">
+                   /Tanatag
+                  </p>
+                </a>
+              </div>
             </div>
+
             <div style="padding: 5% 0%;">
-            <img class="card-img" src="../img/redesocial/instagram.png">
+              <div class="imginstagram">
+                <a href="https://www.instagram.com/tanatag1_/" target="_blank" id="linkWhite">
+                  <p class="textCenter">
+                   @natag
+                  </p>
+                </a>
+              </div>
             </div>
-            <div style="padding: 5% 0%;">
-            <img class="card-img" src="../img/redesocial/twitter.png">
+
+            <div class="imgtwitter">
+              <a href="https://twitter.com/TaNaTag_" target="_blank" id="linkWhite">
+                 <p class="textCenter">
+                 #tagofficial
+                 </p>
+              </a>
             </div>
         </div>
       </div>
