--- a/pages/tesla.html
+++ b/pages/tesla.html
@@ -7,18 +7,18 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/contstyle.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/favico/favicon.ico">
-    <title>Jeff Bezos vai ao espaço no 1º voo tripulado da Blue Origin</title>
+    <title>Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</title>
   </head>
 
   <body>
     <nav>
       <!--Logo centralizado e ajustado no topo-->
       <center>
-      <div class="container">
-        <div class="imgLogo">
-        <img src="../img/logo/logoaju.png" alt="Tag.com Logo" width="25%" height="auto">
+        <div class="container">
+          <div class="imgLogo">
+          <img src="../img/logo/logoaju.png" width="30%" alt="Tag.com Logo">
+          </div>
         </div>
-      </div>
       </center>
 
       <!--Navegador no Topo-->
@@ -81,39 +81,24 @@
         <h1 class="textCenter">
           <strong>
             <font color="red">
-             Jeff Bezos vai ao espaço no 1º voo tripulado da Blue Origin
+              Tesla Model S Plaid+ está cancelado, anuncia Elon Musk
             </font>
           </strong>
         </h1>
         <div>
-        <img src="../img/noticias/future.jpg" alt="Jeff Bezos vai ao espaço" width="30%" align="left"/>
+        <img src="../img/noticias/tesla.png" alt="Tesla Model S Plaid+ está cancelado" width="30%" align="left"/>
         </div>
 
-         <p style="padding-left: 25%;"> O New Shepard, primeiro foguete tripulado da Blue Origin, vai ter o 
-         fundador e CEO, Jeff Bezos, como um dos passageiros em uma viagem 
-         ao espaço. O próprio bilionário, que fundou o grupo Amazon, confirmou a notícia, 
-         informando que o irmão, Mark Bezos, também vai estar presente.</p>
+         <p style="padding-left: 25%;">Elon Musk, CEO da Tesla, revelou publicamente o cancelamento da produção do Model S Plaid+. O veículo elétrico prometia ser uma versão com maior autonomia do novo modelo que será entregue aos motoristas neste mês.</p>
+        
 
-         <p>Ele contou no instagram que desde quando tinha cinco anos, 
-         sonhava em viajar para o espaço, 
-         e no dia 20 de julho, vai embarcar nessa jornada com o irmão. 
-         A maior das aventuras, com o melhor amigo.</p>
+         <p>Em uma publicação no Twitter, o executivo disse que a edição "básica" do Plaid é tão boa que não será necessária outra variante. Por conta disso, o projeto está sendo cancelado pela montadora norte-americana.</p>
 
-         <p>Bezos vai se tornar o primeiro bilionário a viajar ao espaço: Elon Musk, 
-         fundador da SpaceX, já manifestou o desejo de 
-         embarcar nesse tipo de viagem, mas nunca marcou uma data, 
-         e Richard Branson, da Virgin Galactic, planeja embarcar em algo similar no segundo semestre.</p>
+         <p>Conforme as informações, o motor de 1.020 cavalos do Tesla Model S Plaid tem capacidade de ir de 0-100 km/h em apenas 1,99 segundo. Além disso, ele pode atingir a velocidade máxima de 320 km/h.</p>
 
-         <p>O New Shepard que vai levar Jeff Bezos ao espaço foi projetado 
-         para embarcar uma tripulação de seis pessoas, em um voo de 
-         mais ou menos 11 minutos de duração com previsão de chegar a 
-         pouco mais de 96 quilômetros acima da Terra.</p>
+         <p>Embora os detalhes fossem escassos, a maior diferença entre os dois modelos seria em relação à autonomia. Enquanto a versão "básica" tem cerca de 625 km de alcance, a edição especial do veículo poderia rodar 835 km com apenas uma carga de bateria.</p>
 
-         <p>Não está claro ainda se a viagem dele também inclui 
-         passageiros pagantes, mesmo porque ainda não foram divulgados os 
-         preços das passagens. Mas pelo menos um destes “primeiros passageiros” 
-         vai ser o vencedor de um leilão que ainda está em curso. Os lances, 
-         té o momento, estão em quase 3 milhões de dólares, ou mais de 15 milhões de reais.</p>
+         <p>Mesmo após o anúncio de Musk, o Plaid+ continua listado como uma das opções de configurações do Model S no site oficial da Tesla. Contudo, ele permanece indisponível para encomendas.</p>
       </div>
   </main>
 
@@ -122,17 +107,17 @@
         <div class="col-md border-left" style="padding: 2% 1%;">
             <img class="card-img" src="../img/noticias/tesla.png">
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
+              <a href="./tesla.html" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
             </div>
             <hr>
             <img class="card-img" src="../img/noticias/rocketleague.jpg"/>
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
+              <a href="../pages/rocket_league.html" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
             </div>
             <hr>
             <img class="card-img" src="../img/noticias/eua.jfif"/>
             <div class="bgGrid textCenter">
-              <a href="#" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
+              <a href="../pages/eua_paises.html" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
             </div>
         </div>
 
@@ -195,17 +180,35 @@
             </form>
             
             <!--Area de Redes Sociasi e contato do site-->
-            <div class="textCenter">
+            <div class="textCenter" style="padding: 8% 0%;">
               <u>REDE SOCIAIS</u>
             </div>
-            <div style="padding: 5% 0%;">
-            <img class="card-img" src="../img/redesocial/facebook.png">
+            <div style="padding: 2% 0%;">
+              <div class="imgface">
+                <a href="https://www.facebook.com/Tagcom-106992501632839" target="_blank" id="linkWhite">
+                  <p class="textCenter">
+                   /Tanatag
+                  </p>
+                </a>
+              </div>
             </div>
+
             <div style="padding: 5% 0%;">
-            <img class="card-img" src="../img/redesocial/instagram.png">
+              <div class="imginstagram">
+                <a href="https://www.instagram.com/tanatag1_/" target="_blank" id="linkWhite">
+                  <p class="textCenter">
+                   @natag
+                  </p>
+                </a>
+              </div>
             </div>
-            <div style="padding: 5% 0%;">
-            <img class="card-img" src="../img/redesocial/twitter.png">
+
+            <div class="imgtwitter">
+              <a href="https://twitter.com/TaNaTag_" target="_blank" id="linkWhite">
+                 <p class="textCenter">
+                 #tagofficial
+                 </p>
+              </a>
             </div>
         </div>
       </div>
